# king-of-the-grid

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Readme.md
bot-api/: bot_api.c  bot_api.h  z88dk-backend.asm
examples/scanning/: scanning.c
examples/test-bot/: .gitignore  CMakeLists.txt  bot_api.c  bot_api.h  test_bot.c
examples/test-bot-sdcc/: .gitignore  Makefile
examples/test-bot-z88dk/: CMakeLists.txt  test_bot.c
include/: bot.h  bot_api.h  cpu_bot.h  defines.h  frontend.h  prey_bot.h  recording.h  rules.h  sdl_frontend.h  sdl_icon.h  sdl_text.h  seasons.h  server_frontend.h  utils.h  world.h
sdl/: sdl_frontend.cpp
sdl2/: sdl_frontend.cpp
src/: bot.cpp  cpu_bot.cpp  frontend.cpp  main.cpp  prey_bot.cpp  recording.cpp  rules.cpp  seasons.cpp  server_frontend.cpp  utils.cpp  world.cpp
tools/: outcomes2html.py
